--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,21 @@
   }
 }
 
+@layer components {
+  /* Primary button styles */
+  .btn-primary {
+    @apply bg-green-500 text-black p-1 rounded-md hover:text-white
+    dark:bg-green-600 dark:text-gray-200 dark:hover:border dark:hover:border-green-400 
+    dark:hover:text-green-400 dark:hover:bg-black transition-colors;
+  }
+
+  /* Card container styles */
+  .card-container {
+    @apply border rounded-lg px-3 pb-3 pt-1 sm:pt-2 shadow-md bg-white 
+    dark:bg-black dark:border dark:border-solid dark:border-gray-600;
+  }
+}
+
 /* CSS RESET TEMPLATE STARTS  */
 
 html,
