--- a/app/globals.css
+++ b/app/globals.css
@@ -158,6 +158,10 @@
     @apply flex flex-col items-center;
   }
 
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+
   .dark-base-border {
     @apply dark:border dark:border-solid;
   }
